--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="/bower_components/bootstrap-css/css/bootstrap-theme.min.css"/>
 		<link rel="stylesheet" type="text/css" href="/public/css/main.css"/>
 		<script type="text/javascript" src="/bower_components/moment/min/moment-with-locales.min.js"></script>
+		<script type="text/javascript" src="/bower_components/WeakMap/weakmap.js"></script>
 		<script type="text/javascript" src="/bower_components/webcomponentsjs/webcomponents.min.js"></script>
 		<link rel="import" href="/bower_components/polymer/polymer.html"/>
 
